--- a/proiect/BugTracker/BugTracker.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,10 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @*@Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })*@
+            <a href="Account/Manage"><i class="icon-cog2" title="Manage account"></i></a>
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()"><i class="glyphicon glyphicon-log-out"></i></a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()"><i class="glyphicon glyphicon-log-out" title="Log out"></i></a></li>
     </ul>
     }
 }
