--- a/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Create.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Create.cshtml
@@ -75,7 +75,7 @@
 
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
-                    @Html.ActionLink("Cancel", "Index", "Home", null, new { @class = "btn btn-default btn-block btn-lg" })
+                    @Html.ActionLink("Cancel", "Index", "Issue", null, new { @class = "btn btn-default btn-block btn-lg" })
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <input type="submit" value="Create" class="btn btn-primary btn-block btn-lg" />
