--- a/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Index.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Index.cshtml
@@ -128,9 +128,9 @@
                         </a>
                     }
 
-                    <button class="btn btn-sm btn-info" type="button" title="Comments">
+                    <a class="btn btn-sm btn-info" type="button" title="Comments" href="Comment/Index/@issue.IssueId">
                         <i class="icon-bubbles3"></i>
-                    </button>
+                    </a>
 
                     @if (User.IsInRole("Manager"))
                     {
