--- a/proiect/BugTracker/BugTracker.WebUI/Views/Project/Index.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Project/Index.cshtml
@@ -53,6 +53,12 @@
             </div>
         </div>
 
+        <span class="pull-right">
+            <a class="btn btn-sm btn-info" type="button" title="Reports" href="Project/Reports/@Model[i].ProjectId">
+                <i class="icon-stats"></i>
+            </a>
+        </span>
+        <br />
         if (i != Model.Count() - 1)
         {
             <hr />
