--- a/proiect/BugTracker/BugTracker.WebUI/Content/icons.css
+++ b/proiect/BugTracker/BugTracker.WebUI/Content/icons.css
@@ -1,10 +1,10 @@
 ﻿@font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?peoc1z');
-	src:url('fonts/icomoon.eot?#iefixpeoc1z') format('embedded-opentype'),
-		url('fonts/icomoon.woff?peoc1z') format('woff'),
-		url('fonts/icomoon.ttf?peoc1z') format('truetype'),
-		url('fonts/icomoon.svg?peoc1z#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?nes2fv');
+	src:url('fonts/icomoon.eot?#iefixnes2fv') format('embedded-opentype'),
+		url('fonts/icomoon.woff?nes2fv') format('woff'),
+		url('fonts/icomoon.ttf?nes2fv') format('truetype'),
+		url('fonts/icomoon.svg?nes2fv#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -68,6 +68,15 @@
 .icon-cog2:before {
 	content: "\e60e";
 }
+.icon-pie:before {
+	content: "\e613";
+}
+.icon-stats:before {
+	content: "\e614";
+}
+.icon-bars:before {
+	content: "\e615";
+}
 .icon-radio-checked:before {
 	content: "\e60f";
 }
@@ -80,4 +89,3 @@
 .icon-chat:before {
 	content: "\e612";
 }
-
