--- a/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Index.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Index.cshtml
@@ -24,7 +24,7 @@
                 <span class="label label-@issue.Color pull-left">@issue.Priority</span>
                 <h3 class="panel-title pull-left" style="padding-left:10px">@issue.Title</h3>
                 <span class="pull-right clickable panel-collapsed"><i class="glyphicon glyphicon-chevron-down text-muted"></i></span>
-                <em class="pull-right" style="padding-right:10px">@issue.Milestone.DueDate.ToString("dd-MMMM-yyyy")</em>
+                <em class="pull-right" style="padding-right:10px">@issue.Milestone.DueDate.ToString("dd MMMM yyyy")</em>
                 @if (issue.Responsible != null)
                 {
                     <span class="label label-default pull-right" style="margin-right:10px" id="responsibleLabel">@issue.Responsible.DisplayName</span>
